--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   intl: ^0.19.0
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +68,7 @@ flutter:
    - asset/dashboard.png
    - asset/star.png
    - asset/userdelete.png
+   - asset/addphoto.png
 
 
   
