--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,9 +1,24 @@
+buildscript {
+    ext.kotlin_version = '1.9.10'
+    repositories {
+        google()
+        mavenCentral()
+        jcenter()
+    }
+    dependencies {
+        classpath "com.android.tools.build:gradle:8.0.0" // Update to a compatible version
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.google.gms:google-services:4.3.3'
+    }
+}
 allprojects {
     repositories {
         google()
         mavenCentral()
+        jcenter()
     }
 }
+
 
 rootProject.buildDir = "../build"
 subprojects {
@@ -16,3 +31,4 @@ subprojects {
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
+
