--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,18 @@ dependencies:
   cupertino_icons: ^1.0.6
   intl: ^0.19.0
   image_picker: ^1.1.2
+  firebase_auth: ^5.3.1
+  cloud_firestore: ^5.4.4
+  firebase_messaging: ^15.1.3
+  bloc: ^8.1.4
+  equatable: ^2.0.5
+  firebase_storage: ^12.3.3
+  flutter_bloc: ^8.1.6
+  sqflite: ^2.4.0
+  path_provider: ^2.1.4
+  path: ^1.9.0
+  shared_preferences: ^2.3.2
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
